# LibCryptSafe-Messenger

./: .gitignore  AI_PLAN_V2_QWEN.md  CHANNELS_FUTURE.md  CMakeLists.txt  CRYPTO_ROADMAP.md  DENIABILITY_FEATURE.md  I18N_ROADMAP.md  INFRASTRUCTURE.md  KNOWN_ISSUES.md  MULTICONTACT_ROADMAP.md  NARDI_ROADMAP.md  OFFLINE_BUFFER_FUTURE.md  PQC_FUTURE.md  PROJECT_CONTEXT.md  PUSH_NOTIFICATIONS_FUTURE.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RETICULUM_FUTURE.md  SECURITY_HARDENING_ROADMAP.md  TODO_MINOR.md  X3DH_DESIGN.md
LibCryptSafe/include/: Cryptor.h  crypto_engine.hpp
LibCryptSafe/src/: Cryptor.cpp
MessengerApp/: ConnectionManager.hpp  KeyExchange.hpp  client.cpp  connection_manager_test.cpp  crypto_test.cpp  engine_test.cpp  keyexchange_test.cpp  server.cpp  transport_test.cpp
TransportLayer/: direct_p2p.cpp  interface.hpp  local_mesh.cpp  tor_tunnel.cpp
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/kotlin/com/libcryptsafe/: CryptoManager.kt  EnvironmentSecurity.kt  GameActivity.kt  MainActivity.kt  NardiBoardView.kt  NardiBot.kt  NardiModel.kt  PrekeyManager.kt  SessionManager.kt
android/app/src/main/kotlin/com/libcryptsafe/db/: AppDatabase.kt  ContactDao.kt  ContactEntity.kt  KeyStoreManager.kt  MessageDao.kt  MessageEntity.kt  PrekeyDao.kt  PrekeyEntity.kt  SessionDao.kt  SessionEntity.kt
android/app/src/main/res/drawable/: bg_grid.xml  btn_send_bg.xml  bubble_mine.xml  bubble_other.xml  glass_card.xml  glass_input.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  tab_active.xml  tab_inactive.xml
android/app/src/main/res/layout/: activity_game.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-ru/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
infra/relay/: libcryptsafe-relay.service  server.js
relay/: package.json  server.js  test_client.js
tests/: test_android_interop.cpp  test_crypto_attacks.cpp  test_hkdf_rfc5869.cpp  test_privkey_roundtrip.cpp  test_verify_signature.cpp  test_x3dh_initiator.cpp  test_x3dh_roundtrip.cpp  test_x3dh_symmetry.cpp
